[package]
name = "pcap-parser"
version = "0.1.0"
description = "Parser for the PCAP/PCAPNG format"
license = "MIT/Apache-2.0"
keywords = ["pcap","pcapng","parser","nom"]
homepage = "https://github.com/copslock/pcap-parser"
repository = "https://github.com/copslock/pcap-parser.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
nom = "3.0"
cookie-factory = "*"
byteorder = "1"
